--- a/contador-de-clicks/src/App.css
+++ b/contador-de-clicks/src/App.css
@@ -5,7 +5,7 @@
 }
 html,
 body {
-  background-color: black;
+  background-color: rgb(3, 5, 29);
 }
 
 .App{
@@ -28,4 +28,14 @@ body {
 
 .freecodecamp-logo{
   height: 200px;
+}
+
+.contenedor-principal{
+  height: 550px;
+  min-width: 600px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
